0.8.2 to current

	Try to save and restore terminal state while running external
	applications.  Thanks to Losiara.

	Fixed redirecting stdout of background commands to /dev/null, which could
	be unwritable descriptor.  Thanks to c02y.

0.8.2-beta to 0.8.2

	Added support for matchit to filetype plugin.  Patch by filterfalse.

	Fixed processing of root directory (completion, :cd).  Thanks to
	filterfalse.

	Fixed completion of commands after :!.  Thanks to filterfalse.

	Fixed formatting/wording/outdated notes in documentation.  Patches by
	filterfalse.

0.8.1a to 0.8.2-beta

	Added highlighting of search matches in menus.

	Added :noh[lsearch] command to menu mode.

	Added quick shortcuts to dialogs.  Patch by oo-.

	Added 'wildstyle' option to control the way wild menu is displayed.
	Enables displaying it as a menu with one item per line.  Thanks to
	santhoshr and octos.

	Added 'suggestoptions' option to control displaying of suggestions.

	Added description of builtin keys to :map menus.

	Added SuggestBox highlight group for key suggestion box.

	Added :write command to menus, that writes all menu lines into specified
	file.  Thanks to gtors.

	Added support of patterns to 'classify' option, so that files can now be
	decorated based on their names.  Thanks to elricbk.

	Added "filelist" parameter to :sync! that enables synchronization of
	custom view.  Thanks to filterfalse.

	Added 'cvoptions' option to control when entering/leaving custom views is
	considered to be equal to entering/leaving directories.  Thanks to
	filterfalse.

	Added "target" sorting key, which sorts files by symbolic link targets.
	Thanks to Marcos Cruz.

	Added negation to patterns with explicitly specified type (surrounded by
	{} or //).  Put exclamation mark to invert pattern match.  Thanks to Marcos
	Cruz.

	Added :select and :unselect commands.  Thanks to filterfalse, Russell
	Urquhart and Marcos Cruz.

	Added chooseopt() builtin function that retrieves various parameters of