@@ -144,8 +144,8 @@ k, gk or Ctrl-P - move cursor up one line.     *vifm-k* *vifm-gk* *vifm-CTRL-P*
 j, gj or Ctrl-N - move cursor down one line.   *vifm-j* *vifm-gj* *vifm-CTRL-N*
 
 h                                              *vifm-h*
-    when |vifm-'lsview'| is off move up one directory, otherwise move left one
-    file.
+    when |vifm-'lsview'| is off move up one directory (moves to parent
+    directory node in tree view), otherwise move left one file.
 l                                              *vifm-l*
     when |vifm-'lsview'| is off move into a directory or launches a file,
     otherwise move right one file.
@@ -2113,6 +2113,13 @@ yet supported) and might be changed in future releases, or get an alias.
     are cleared when |vifm-:empty| command is executed.
 :trashes?
     same as :trashes, but also displays size of each trash directory.
+
+:tree                                          *vifm-:tree*
+    turn pane into tree view with current directory as a root.  The tree
+    view is implemented on top of a custom view, but is automatically kept in
+    sync with file system state and considers all the filters.  Thus the
+    structure corresponds to what one would see on visiting the directories
+    manually.
 
 :undol[ist]                                    *vifm-:undolist* *vifm-:undol*
     display list of latest changes.  Use "!" to see actual commands.
@@ -4098,7 +4105,10 @@ Custom views have some differences related to navigation in regular views.
 gf - acts similar to |vifm-gf| on symbolic links and navigates to the file at
      its real location
 
-h, gh - return to the original directory.
+h - go to closes parent node in tree view, otherwise return to the original
+directory.
+
+gh - return to the original directory.
 
 Opening ".." entry also causes return to the original directory.
 
